# inference_results_v1.0

./: README.md
.github/workflows/: pull_request_template.md
closed/Alibaba/: Makefile  README.md  calibration.md  results_summary.csv
closed/Alibaba/code/: README.md
closed/Alibaba/code/harness/: CMakeLists.txt
closed/Alibaba/code/harness/common/: callback.hpp  harness_flags.hpp  logger.cpp  utils.hpp
closed/Alibaba/code/harness/harness_bert/: bert_server.cc  main_bert.cc
closed/Alibaba/code/harness/harness_default/: main_default.cc
closed/Alibaba/code/harness/harness_dlrm/: dlrm_server.cc  dlrm_server.h  main_dlrm.cc
closed/Alibaba/code/harness/harness_rnnt/: nvtx_wrapper.h
closed/Alibaba/code/harness/harness_triton_mig/: main_server.cc  triton_frontend.cpp  triton_frontend.hpp
closed/Alibaba/code/harness/lwis/: CMakeLists.txt
closed/Alibaba/code/harness/lwis/src/: lwis.cpp
closed/Alibaba/data_maps/: README.md
closed/Alibaba/docker/: Dockerfile.build
closed/Alibaba/scripts/: check_intranet.sh  generate_system_descriptions.py  get_gencode_x86_64  install_xavier_dependencies.sh  mig_configure.sh  mig_get_uuid.sh  restore_full_accuracy_logs.py  update_config_json.py  update_results.py
closed/Alibaba/systems/: A10x1_TRT.json  A10x2_TRT.json  DGX-A100_A100-SXM4-40GBx1_TRT.json  DGX-A100_A100-SXM4-40GBx8_TRT.json  system_descriptions.tsv
closed/Centaur Technology/: base.Dockerfile
closed/Centaur Technology/docs/: Calibration.md  Measurements.md
closed/Centaur Technology/results/: submission_checker_log.txt
closed/Centaur Technology/systems/: Centaur-AIC-2.0GHz.json  Centaur-AIC-2.5GHz.json
closed/DellEMC/: Makefile  README.md  calibration.md  xe8545.md
closed/DellEMC/code/: dlrm-99.9
closed/DellEMC/docker/: Dockerfile
closed/DellEMC/results/: submission_checker_log.txt
closed/DellEMC/systems/: DSS8440_A100-PCIE-40GBx10_TRT.json  DSS8440_A40x10_TRT.json  R740_A100-PCIe-40GBx3_TRT.json  R750_Intel6330_openvino.json  R750xa_A100-PCIE-40GBx4_TRT.json  R7525_A100-PCIe-40GBx2_TRT.json  R7525_A100_PCIe-40GBx3_TRT.json  R7525_QuadroRTX8000x3_TRT.json  XE2420_T4x1_TRT.json  XE2420_datacenter_T4x4_TRT.json  XE2420_edge_T4x4_TRT.json  XE8545_7713_A100-SXM4-40GBx4.json  XE8545_7763_A100-SXM4-40GBx4_TRT.json  XE8545_7763_A100-SXM4-80GBx4_TRT.json
closed/Edgecortix/: README.md  calibration.md
closed/Edgecortix/systems/: edgecortix-DNA_F_SERIES.json
closed/Fujitsu/: Makefile  README.md
closed/Fujitsu/code/: bert-99
closed/Fujitsu/docker/: Dockerfile
closed/Fujitsu/results/: submission_checker_log.txt
closed/Fujitsu/scripts/: launch_heterogeneous_mig.md  mig_configure.sh  utils.py
closed/Fujitsu/systems/: A100-PCIex2_TRT.json  A10x2_TRT.json  (+2 more)
closed/GIGABYTE/: .dockerignore  .gitignore  3d-unet_offline_result  Makefile  bert_server_result  dgx-a100.md  dlrm_server_result  mlperf_log_accuracy_baseline.json  results_metadata.json  ssd-resnet34_server_result
closed/HPE/: README.md  results_metadata.json  results_summary.csv  submission_guide.md
closed/Inspur/: .gitattributes  Makefile  README.md  README.txt  Start_From_Device.md  calibration.md  results_metadata.json
closed/Intel/code/3d-unet-99.9/openvino/: CMakeLists.txt  README.md
closed/Intel/code/3d-unet-99.9/openvino/ov_mlperf/: CMakeLists.txt  args.cpp  args.h  brats_qsl.h  engine.cpp  engine.h  main.cpp  mmap.h  utils.cpp  utils.h
closed/Intel/code/3d-unet-99.9/openvino/ov_mlperf/pickler/: opcode.h  pickler.h
closed/Intel/code/resnet50/openvino/src/: CMakeLists.txt  README.md  backend_ov.h  dataset_ov.h  infer_request_wrap.h  input_flags.h  item_ov.h  main_ov.cc  post_processors.h  sut_ov.h  utils.h  workload_helpers.h
closed/Intel/code/resnet50/openvino/src/scripts/: setup_env.sh
closed/Intel/code/resnet50/openvino/src/scripts/1-node-2s-icx-ov/: resnet50-offline-acc.sh  resnet50-offline.sh  resnet50-server-acc.sh  resnet50-server.sh  ssd-resnet34-offline-acc.sh  ssd-resnet34-offline.sh  ssd-resnet34-server-acc.sh  ssd-resnet34-server.sh  user.conf
closed/Intel/code/resnet50/openvino/src/scripts/1-node-4s-cpx-ov-bf16/: resnet50_bf16_off.sh  resnet50_bf16_off_acc.sh  resnet50_bf16_server.sh  resnet50_bf16_server_acc.sh  setup_env.sh  user.conf
closed/Intel/code/resnet50/openvino/src/scripts/1-node-4s-cpx-ov-int8/: resnet50-offline-acc.sh  resnet50-offline.sh  resnet50-server-acc.sh  resnet50-server.sh  ssd-resnet34-offline-acc.sh  ssd-resnet34-offline.sh  ssd-resnet34-server-acc.sh  ssd-resnet34-server.sh  user.conf
closed/Intel/code/resnet50/openvino/src/scripts/1-node-8s-cpx-ov-int8/: ssd-resnet34-offline-acc.sh  ssd-resnet34-offline.sh  ssd-resnet34-server-acc.sh  ssd-resnet34-server.sh  user.conf
closed/Intel/code/resnet50/openvino/src/tools/: create_image_list.py
closed/Krai/: calibration.md
closed/Lenovo/: Makefile  README.md  calibration.md
closed/Mobilint/: calibration.md  submission_checklist.md
closed/NVIDIA/: .gitignore  FAQ.md  Makefile  README.md  README_Triton_CPU.md  dgx-a100.md  results_metadata.json  submission_guide.md
closed/Neuchips/: README.md  calibration.md
closed/Qualcomm/: calibration.md
closed/Supermicro/: README.md  calibration.md
closed/Xilinx/: calibration.md
open/Alibaba/: .gitignore  Makefile  README.md  calibration.md  command_flags.md  results_summary.csv
open/Alibaba/code/harness/: CMakeLists.txt
open/Alibaba/code/harness/harness_bert/: bert_server.h
open/Alibaba/code/harness/harness_dlrm/: batch_maker.cpp  batch_maker.hpp  dlrm_qsl.hpp
open/Alibaba/code/harness/harness_rnnt/: rnnt_kernels.cu  user.conf
open/Alibaba/code/harness/harness_triton/: main_server.cc  triton_frontend.cpp  triton_frontend.hpp
open/Alibaba/code/harness/lwis/include/: lwis.hpp
open/Edgecortix/: README.md  calibrate_torchvision_model.py
open/Fujitsu/: Makefile  build  scripts
open/Inspur/: .gitignore  Makefile  command_flags.md  performance_tuning_guide.md  results_metadata.json  submission_guide.md
open/Mobilint/: README.md  submission_checklist.md
open/NVIDIA/: .gitignore  Makefile  README.md  submission_guide.md
(+20411 files in other folders)
